--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-const SPREADSHEET_ID = "你的試算表ID"; // 改成你的試算表ID
+const SPREADSHEET_ID = "1s8o01rW7MiwN1T_Yb3wq61dRhFIcbKqmsU10lYaSsH8"; // 改成你的試算表ID
 const SHEET_NAME = "Sheet1";
 
 // ---------- 主頁 ----------
@@ -139,3 +139,4 @@ function doPost(e){
 
   return ContentService.createTextOutput('OK');
 }
+
