--- a/index.html
+++ b/index.html
@@ -1,142 +1,151 @@
-const SPREADSHEET_ID = "1s8o01rW7MiwN1T_Yb3wq61dRhFIcbKqmsU10lYaSsH8"; // 改成你的試算表ID
-const SHEET_NAME = "Sheet1";
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8">
+  <title>智慧藥盒管理</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 60%;
+      margin-bottom: 20px;
+    }
+    th, td {
+      border: 1px solid #333;
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background-color: #eee;
+    }
+    select, input[type="text"], input[type="time"] {
+      width: 100%;
+    }
+    button {
+      padding: 4px 8px;
+    }
+  </style>
+</head>
+<body>
+  <h2>智慧藥盒管理</h2>
 
-// ---------- 主頁 ----------
-function doGet(e) {
-  if (e && e.parameter.action === "read") return readData();
+  <!-- 新增藥品區 -->
+  <div>
+    <select id="drugSelect">
+      <option value="">-- 選擇歷史藥品 --</option>
+    </select>
+    <input type="text" id="newName" placeholder="或輸入新藥品名稱">
+    <input type="time" id="newTime">
+    <button onclick="addDrug()">新增藥品</button>
+  </div>
 
-  const html = `
-  <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>智慧藥盒</title>
-    <style>
-      body { font-family:'微軟正黑體'; padding:20px; background:#f5f5f5; }
-      table { border-collapse:collapse; width:100%; background:white; }
-      th,td { border:1px solid #ccc; padding:8px; text-align:center; }
-      th { background:#3498db; color:white; }
-      input,button { padding:5px; margin:4px; }
-      button { border:none; border-radius:5px; cursor:pointer; }
-    </style>
-  </head>
-  <body>
-    <h1>智慧藥盒</h1>
-    <div>目前時間：<span id="nowTime"></span></div>
+  <!-- 目前藥品清單 -->
+  <h3>目前藥品列表</h3>
+  <table id="drugTable">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>藥品名稱</th>
+        <th>時間</th>
+        <th>已服用</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-    <div>
-      藥品名稱：<input id="drugName" list="drugHistory">
-      <datalist id="drugHistory"></datalist>
-      時間(多個逗號)：<input id="drugTime" placeholder="08:00,12:00">
-      <button onclick="addDrug()">新增藥品</button>
-    </div>
+  <script>
+    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwxOl74ue1pG5rHSSueIwP5gMrA05lgTmk9PN1vSRzAYkcHPKHyNvTLNeAij2kvnYrv/exec';
 
-    <table id="drugTable">
-      <tr><th>#</th><th>藥品名稱</th><th>時間</th><th>已服用</th><th>操作</th></tr>
-    </table>
-
-    <script>
-      const WEB_APP_URL = window.location.href;
-
-      function updateClock() {
-        const now = new Date();
-        document.getElementById('nowTime').innerText = now.toLocaleTimeString('zh-TW',{hour12:false});
-      }
-      setInterval(updateClock,1000);
-      updateClock();
-
-      async function loadData(){
-        const res = await fetch(WEB_APP_URL + "?action=read");
-        const data = await res.json();
-        const tbody = document.getElementById('drugTable');
-        tbody.innerHTML='<tr><th>#</th><th>藥品名稱</th><th>時間</th><th>已服用</th><th>操作</th></tr>';
-
-        // 歷史藥品下拉
-        const dl = document.getElementById('drugHistory');
-        dl.innerHTML='';
-        [...new Set(data.map(d=>d.name))].forEach(n=>{
-          const opt=document.createElement('option'); opt.value=n; dl.appendChild(opt);
+    // 取得藥品清單
+    function fetchDrugs() {
+      fetch(WEB_APP_URL)
+        .then(res => res.json())
+        .then(json => {
+          const tbody = document.querySelector("#drugTable tbody");
+          tbody.innerHTML = "";
+          json.data.forEach(item => {
+            const tr = document.createElement("tr");
+            tr.innerHTML = `
+              <td>${item.rowIndex - 1}</td>
+              <td>${item.name}</td>
+              <td>${item.time}</td>
+              <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done ? 'checked' : ''} onchange="toggleDone(this)"></td>
+            `;
+            tbody.appendChild(tr);
+          });
         });
+    }
 
-        data.forEach((r,i)=>{
-          const tr=document.createElement('tr');
-          tr.innerHTML=\`
-            <td>\${i+1}</td>
-            <td>\${r.name}</td>
-            <td>\${r.time}</td>
-            <td><input type="checkbox" \${r.done==='TRUE'?'checked':''} onchange="toggleDone(\${i+2},this.checked)"></td>
-            <td><button onclick="deleteDrug(\${i+2})">刪除</button></td>
-          \`;
-          tbody.appendChild(tr);
-        });
+    // 勾選已服用
+    function toggleDone(cb) {
+      const rowIndex = parseInt(cb.dataset.rowIndex);
+      const done = cb.checked;
+      fetch(WEB_APP_URL, {
+        method: "POST",
+        body: JSON.stringify({
+          action: "update",
+          data: [{ rowIndex, done }]
+        })
+      })
+      .then(res => res.json())
+      .then(result => {
+        if (result.status !== "success") {
+          alert("更新失敗");
+          cb.checked = !done;
+        }
+      });
+    }
+
+    // 新增藥品
+    function addDrug() {
+      const selected = document.getElementById("drugSelect").value;
+      const manual = document.getElementById("newName").value.trim();
+      const name = manual || selected;
+      const time = document.getElementById("newTime").value;
+
+      if (!name || !time) {
+        alert("請輸入藥品名稱與時間");
+        return;
       }
 
-      async function addDrug(){
-        const name=document.getElementById('drugName').value.trim();
-        const time=document.getElementById('drugTime').value.trim();
-        if(!name || !time) return alert('請輸入藥品名稱與時間');
+      fetch(WEB_APP_URL, {
+        method: "POST",
+        body: JSON.stringify({
+          action: "write",
+          data: { name, time, done: false }
+        })
+      })
+      .then(res => res.json())
+      .then(result => {
+        if (result.status === "success") {
+          document.getElementById("newName").value = "";
+          document.getElementById("newTime").value = "";
+          fetchDrugs();
+          fetchHistoryList();
+        } else {
+          alert("新增失敗：" + result.message);
+        }
+      });
+    }
 
-        await fetch(WEB_APP_URL,{
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body: JSON.stringify({action:'add',name,time})
+    // 取得歷史藥品列表
+    function fetchHistoryList() {
+      fetch(WEB_APP_URL + '?mode=history')
+        .then(res => res.json())
+        .then(json => {
+          const select = document.getElementById("drugSelect");
+          select.innerHTML = '<option value="">-- 選擇歷史藥品 --</option>';
+          json.history.forEach(name => {
+            const opt = document.createElement("option");
+            opt.value = name;
+            opt.textContent = name;
+            select.appendChild(opt);
+          });
         });
+    }
 
-        document.getElementById('drugName').value='';
-        document.getElementById('drugTime').value='';
-        loadData();
-      }
-
-      async function toggleDone(row,checked){
-        await fetch(WEB_APP_URL,{
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body: JSON.stringify({action:'done',row})
-        });
-        loadData();
-      }
-
-      async function deleteDrug(row){
-        if(!confirm('確定刪除?')) return;
-        await fetch(WEB_APP_URL,{
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body: JSON.stringify({action:'delete',row})
-        });
-        loadData();
-      }
-
-      loadData();
-      setInterval(loadData,10000);
-    </script>
-  </body>
-  </html>
-  `;
-
-  return HtmlService.createHtmlOutput(html).setXFrameOptionsMode(HtmlService.XFrameOptionsMode.ALLOWALL);
-}
-
-// ---------- 讀取資料 ----------
-function readData(){
-  const sheet = SpreadsheetApp.openById(SPREADSHEET_ID).getSheetByName(SHEET_NAME);
-  const rows = sheet.getDataRange().getValues().slice(1);
-  const result = rows.map(r=>({name:r[1],time:r[2],done:r[3]}));
-  return ContentService.createTextOutput(JSON.stringify(result))
-                       .setMimeType(ContentService.MimeType.JSON);
-}
-
-// ---------- POST 操作 ----------
-function doPost(e){
-  const sheet = SpreadsheetApp.openById(SPREADSHEET_ID).getSheetByName(SHEET_NAME);
-  const data = JSON.parse(e.postData.contents);
-
-  if(data.action==='add'){
-    sheet.appendRow([sheet.getLastRow(),data.name,data.time,false]);
-  } else if(data.action==='done'){
-    sheet.getRange(data.row,4).setValue(true);
-  } else if(data.action==='delete'){
-    sheet.deleteRow(data.row);
-  }
-
-  return ContentService.createTextOutput('OK');
-}
-
+    // 初始化
+    fetchDrugs();
+    fetchHistoryList();
+  </script>
+</body>
+</html>
