--- a/index.html
+++ b/index.html
@@ -4,25 +4,11 @@
   <meta charset="UTF-8">
   <title>智慧藥盒管理</title>
   <style>
-    table {
-      border-collapse: collapse;
-      width: 60%;
-      margin-bottom: 20px;
-    }
-    th, td {
-      border: 1px solid #333;
-      padding: 8px;
-      text-align: center;
-    }
-    th {
-      background-color: #eee;
-    }
-    select, input[type="text"], input[type="time"] {
-      width: 100%;
-    }
-    button {
-      padding: 4px 8px;
-    }
+    table { border-collapse: collapse; width: 60%; margin-bottom: 20px; }
+    th, td { border: 1px solid #333; padding: 8px; text-align: center; }
+    th { background-color: #eee; }
+    select, input[type="text"], input[type="time"] { width: 100%; }
+    button { padding: 4px 8px; }
   </style>
 </head>
 <body>
@@ -53,10 +39,22 @@
     <tbody></tbody>
   </table>
 
-  <script>
-    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwxOl74ue1pG5rHSSueIwP5gMrA05lgTmk9PN1vSRzAYkcHPKHyNvTLNeAij2kvnYrv/exec';
+  <!-- 漏吃藥品清單 -->
+  <h3>漏吃藥品列表</h3>
+  <table id="missedTable">
+    <thead>
+      <tr>
+        <th>數目</th>
+        <th>藥品名稱(漏吃藥品)</th>
+        <th>時間</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-    // 取得藥品清單
+  <script>
+    const WEB_APP_URL = 'YOUR_WEB_APP_URL_HERE';
+
     function fetchDrugs() {
       fetch(WEB_APP_URL)
         .then(res => res.json())
@@ -74,9 +72,24 @@
           });
           tbody.innerHTML = html;
         });
+
+      // 同時抓漏吃藥品表
+      fetch(WEB_APP_URL + '?mode=missed')
+        .then(res => res.json())
+        .then(json => {
+          const tbody = document.querySelector("#missedTable tbody");
+          let html = "";
+          json.missed.forEach((item, idx)=>{
+            html += `<tr>
+              <td>${idx+1}</td>
+              <td>${item.name}</td>
+              <td>${item.time}</td>
+            </tr>`;
+          });
+          tbody.innerHTML = html;
+        });
     }
 
-    // 勾選已服用
     function toggleDone(cb) {
       const rowIndex = parseInt(cb.dataset.rowIndex);
       const done = cb.checked;
@@ -85,14 +98,10 @@
         body: JSON.stringify({ action:"update", data:[{rowIndex, done}] })
       }).then(res=>res.json())
         .then(result=>{
-          if(result.status!=="success") {
-            alert("更新失敗");
-            cb.checked = !done;
-          }
+          if(result.status!=="success") { alert("更新失敗"); cb.checked = !done; }
         });
     }
 
-    // 刪除藥品
     function deleteDrug(rowIndex) {
       if(!confirm("確定要刪除這個藥品嗎？")) return;
       fetch(WEB_APP_URL, {
@@ -100,14 +109,11 @@
         body: JSON.stringify({ action:"delete", data:{rowIndex} })
       }).then(res=>res.json())
         .then(result=>{
-          if(result.status==="success") {
-            fetchDrugs();       
-            fetchHistoryList();
-          } else alert("刪除失敗："+result.message);
+          if(result.status==="success") fetchDrugs();
+          else alert("刪除失敗："+result.message);
         });
     }
 
-    // 新增藥品
     function addDrug() {
       const selected = document.getElementById("drugSelect").value;
       const manual = document.getElementById("newName").value.trim();
@@ -128,7 +134,6 @@
         });
     }
 
-    // 取得歷史藥品列表
     function fetchHistoryList() {
       fetch(WEB_APP_URL + '?mode=history')
         .then(res => res.json())
@@ -144,12 +149,9 @@
         });
     }
 
-    // 初始化
     fetchDrugs();
     fetchHistoryList();
-
-    // 自動每秒刷新藥品清單
-    setInterval(fetchDrugs, 1000);
+    setInterval(fetchDrugs, 1000); // 每秒刷新
   </script>
 </body>
 </html>
