--- a/index.html
+++ b/index.html
@@ -4,204 +4,134 @@
   <meta charset="UTF-8">
   <title>智慧藥盒管理</title>
   <style>
-    table {
-      border-collapse: collapse;
-      width: 60%;
-      margin-bottom: 20px;
-    }
-    th, td {
-      border: 1px solid #333;
-      padding: 8px;
-      text-align: center;
-    }
-    th {
-      background-color: #eee;
-    }
-    select, input[type="text"], input[type="time"] {
-      width: 100%;
-    }
-    button {
-      padding: 4px 8px;
-    }
+    table {border-collapse: collapse; width: 80%; margin-bottom: 20px;}
+    th, td {border:1px solid #333; padding:8px; text-align:center;}
+    th {background-color:#eee;}
+    select,input[type="text"],input[type="time"]{width:100%;}
+    button{padding:4px 8px;}
   </style>
 </head>
 <body>
   <h2>智慧藥盒管理</h2>
 
-  <!-- 新增藥品 -->
   <div>
-    <select id="drugSelect">
-      <option value="">-- 選擇歷史藥品 --</option>
-    </select>
+    <select id="drugSelect"><option value="">-- 選擇歷史藥品 --</option></select>
     <input type="text" id="newName" placeholder="或輸入新藥品名稱">
     <input type="time" id="newTime">
     <button onclick="addDrug()">新增藥品</button>
   </div>
 
-  <!-- 主列表 -->
   <h3>目前藥品列表</h3>
   <table id="drugTable">
     <thead>
-      <tr>
-        <th>#</th>
-        <th>藥品名稱</th>
-        <th>時間</th>
-        <th>已服用</th>
-        <th>操作</th>
-      </tr>
+      <tr><th>#</th><th>藥品名稱</th><th>日期</th><th>時間</th><th>已服用</th><th>操作</th></tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <!-- 漏吃藥品 -->
   <h3>漏吃藥品列表</h3>
   <table id="missedTable">
     <thead>
-      <tr>
-        <th>數目</th>
-        <th>藥品名稱 (漏吃藥品)</th>
-        <th>時間</th>
-      </tr>
+      <tr><th>#</th><th>藥品名稱(漏吃藥品)</th><th>日期</th><th>時間</th></tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <script>
-    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwxOl74ue1pG5rHSSueIwP5gMrA05lgTmk9PN1vSRzAYkcHPKHyNvTLNeAij2kvnYrv/exec';
+<script>
+const WEB_APP_URL = 'YOUR_DEPLOYED_WEB_APP_URL';
+let mainVersion = 0;
+let missedVersion = 0;
 
-    // 取得主表
-    function fetchDrugs() {
-      fetch(WEB_APP_URL)
-        .then(res => res.json())
-        .then(json => {
-          const tbody = document.querySelector("#drugTable tbody");
-          tbody.innerHTML = "";
-          json.data.forEach((item, idx) => {
-            const tr = document.createElement("tr");
-            tr.innerHTML = `
-              <td>${idx + 1}</td>
-              <td>${item.name}</td>
-              <td>${item.time}</td>
-              <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done ? 'checked' : ''} onchange="toggleDone(this)"></td>
-              <td><button onclick="deleteDrug(${item.rowIndex})">刪除</button></td>
-            `;
-            tbody.appendChild(tr);
-          });
-          // 更新漏吃表
-          showMissed(json.data);
+function smartFetchDrugs(){
+  fetch(WEB_APP_URL)
+    .then(res=>res.json())
+    .then(json=>{
+      if(json.version !== mainVersion){
+        mainVersion = json.version;
+        const tbody=document.querySelector("#drugTable tbody");
+        tbody.innerHTML="";
+        json.data.forEach((item,idx)=>{
+          const tr=document.createElement("tr");
+          tr.innerHTML=`<td>${idx+1}</td><td>${item.name}</td><td>${item.date}</td><td>${item.time}</td>
+            <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done?'checked':''} onchange="toggleDone(this)"></td>
+            <td><button onclick="deleteDrug(${item.rowIndex})">刪除</button></td>`;
+          tbody.appendChild(tr);
         });
-    }
-
-    // 取得漏吃藥品
-    function showMissed(data) {
-      const tbody = document.querySelector("#missedTable tbody");
-      tbody.innerHTML = "";
-      const missed = data.filter(d => !d.done);
-      missed.forEach((item, idx) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${idx + 1}</td>
-          <td>${item.name}</td>
-          <td>${item.time}</td>
-        `;
-        tbody.appendChild(tr);
-      });
-    }
-
-    // 勾選更新服用狀態
-    function toggleDone(cb) {
-      const rowIndex = parseInt(cb.dataset.rowIndex);
-      const done = cb.checked;
-      fetch(WEB_APP_URL, {
-        method: "POST",
-        body: JSON.stringify({
-          action: "update",
-          data: [{ rowIndex, done }]
-        })
-      })
-      .then(res => res.json())
-      .then(result => {
-        if (result.status === "success") {
-          fetchDrugs();
-        } else {
-          alert("更新失敗");
-          cb.checked = !done;
-        }
-      });
-    }
-
-    // 新增藥品
-    function addDrug() {
-      const selected = document.getElementById("drugSelect").value;
-      const manual = document.getElementById("newName").value.trim();
-      const name = manual || selected;
-      const time = document.getElementById("newTime").value;
-
-      if (!name || !time) {
-        alert("請輸入藥品名稱與時間");
-        return;
       }
+      smartFetchMissed();
+    });
+}
 
-      fetch(WEB_APP_URL, {
-        method: "POST",
-        body: JSON.stringify({
-          action: "write",
-          data: { name, time, done: false }
-        })
-      })
-      .then(res => res.json())
-      .then(result => {
-        if (result.status === "success") {
-          document.getElementById("newName").value = "";
-          document.getElementById("newTime").value = "";
-          fetchDrugs();
-          fetchHistoryList();
-        } else {
-          alert("新增失敗：" + result.message);
-        }
-      });
-    }
-
-    // 刪除藥品
-    function deleteDrug(rowIndex) {
-      if (!confirm("確定要刪除此藥品？")) return;
-      fetch(WEB_APP_URL, {
-        method: "POST",
-        body: JSON.stringify({
-          action: "delete",
-          rowIndex: rowIndex
-        })
-      })
-      .then(res => res.json())
-      .then(result => {
-        if (result.status === "success") {
-          fetchDrugs();
-          fetchHistoryList();
-        } else {
-          alert("刪除失敗：" + result.message);
-        }
-      });
-    }
-
-    // 取得歷史藥品（從現有名稱欄）
-    function fetchHistoryList() {
-      fetch(WEB_APP_URL + '?mode=history')
-        .then(res => res.json())
-        .then(json => {
-          const select = document.getElementById("drugSelect");
-          select.innerHTML = '<option value="">-- 選擇歷史藥品 --</option>';
-          json.history.forEach(name => {
-            const opt = document.createElement("option");
-            opt.value = name;
-            opt.textContent = name;
-            select.appendChild(opt);
-          });
+function smartFetchMissed(){
+  fetch(WEB_APP_URL+'?mode=missed')
+    .then(res=>res.json())
+    .then(json=>{
+      if(json.version !== missedVersion){
+        missedVersion = json.version;
+        const tbody=document.querySelector("#missedTable tbody");
+        tbody.innerHTML="";
+        json.missed.forEach((item,idx)=>{
+          const tr=document.createElement("tr");
+          tr.innerHTML=`<td>${idx+1}</td><td>${item.name}</td><td>${item.date}</td><td>${item.time}</td>`;
+          tbody.appendChild(tr);
         });
-    }
+      }
+    });
+}
 
-    // 初始化
-    fetchDrugs();
-    fetchHistoryList();
-  </script>
+function toggleDone(cb){
+  const rowIndex = parseInt(cb.dataset.rowIndex);
+  const done = cb.checked;
+  fetch(WEB_APP_URL,{method:"POST",body:JSON.stringify({action:"update",data:[{rowIndex,done}]})})
+    .then(res=>res.json())
+    .then(result=>{ if(result.status==="success"){ smartFetchDrugs(); } else { alert("更新失敗"); cb.checked=!done; } });
+}
+
+function addDrug(){
+  const selected = document.getElementById("drugSelect").value;
+  const manual = document.getElementById("newName").value.trim();
+  const name = manual || selected;
+  const time = document.getElementById("newTime").value;
+  if(!name||!time){ alert("請輸入藥品名稱與時間"); return; }
+  fetch(WEB_APP_URL,{method:"POST",body:JSON.stringify({action:"write",data:{name,time,done:false}})})
+    .then(res=>res.json())
+    .then(result=>{
+      if(result.status==="success"){
+        document.getElementById("newName").value="";
+        document.getElementById("newTime").value="";
+        smartFetchDrugs();
+        fetchHistoryList();
+      } else alert("新增失敗："+result.message);
+    });
+}
+
+function deleteDrug(rowIndex){
+  if(!confirm("確定要刪除此藥品？")) return;
+  fetch(WEB_APP_URL,{method:"POST",body:JSON.stringify({action:"delete",data:{rowIndex}})})
+    .then(res=>res.json())
+    .then(result=>{
+      if(result.status==="success"){ smartFetchDrugs(); fetchHistoryList(); }
+      else alert("刪除失敗："+result.message);
+    });
+}
+
+function fetchHistoryList(){
+  fetch(WEB_APP_URL+'?mode=history')
+    .then(res=>res.json())
+    .then(json=>{
+      const select = document.getElementById("drugSelect");
+      select.innerHTML='<option value="">-- 選擇歷史藥品 --</option>';
+      json.history.forEach(name=>{
+        const opt=document.createElement("option");
+        opt.value=name; opt.textContent=name; select.appendChild(opt);
+      });
+    });
+}
+
+// 初始化
+smartFetchDrugs();
+fetchHistoryList();
+setInterval(()=>{ smartFetchDrugs(); fetchHistoryList(); },10000);
+</script>
 </body>
 </html>
