--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ button{padding:4px 8px;}
 </table>
 
 <script>
-const WEB_APP_URL='你的WebAppURL';
+const WEB_APP_URL='https://script.google.com/macros/s/AKfycbwxOl74ue1pG5rHSSueIwP5gMrA05lgTmk9PN1vSRzAYkcHPKHyNvTLNeAij2kvnYrv/exec';
 let mainVersion=0, missedVersion=0;
 
 // 取得主表
@@ -126,3 +126,4 @@ setInterval(()=>{ fetchMain(); fetchHistory(); },5000);
 </script>
 </body>
 </html>
+
